added testing framework

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,5 +3,6 @@ project(string_algorithms C)
 
 set(CMAKE_C_STANDARD 99)
 
-add_executable(naive_SACA naive_SACA.c)
+add_executable(naive_SACA src/naive_SACA.c)
+add_executable(test test/test_naive_SACA.c)
 
