testing framework can now test the source code

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,8 +1,12 @@
-cmake_minimum_required(VERSION 3.17)
+cmake_minimum_required(VERSION 3.16)
 project(string_algorithms C)
 
 set(CMAKE_C_STANDARD 99)
 
-add_executable(naive_SACA src/naive_SACA.c)
-add_executable(test test/test_naive_SACA.c)
+add_library(suffix_array src/suffix_array.h src/suffix_array.c)
 
+add_executable(naive_SACA src/naive_SACA.c)
+target_link_libraries(naive_SACA PRIVATE suffix_array)
+
+add_executable(test_SACA test/test_suffix_array.c)
+target_link_libraries(test_SACA suffix_array check m rt pthread subunit)
