--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -14,3 +14,5 @@ target_link_libraries(test_SACA suffix_array check m rt pthread subunit)
 add_executable(test_bmh test/test_bmh.c)
 target_link_libraries(test_bmh check m rt pthread subunit)
 
+add_executable(bmh src/bmh.c)
+
